[package]
name = "cesu8-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cesu8]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "from_cesu8"
path = "fuzz_targets/from_cesu8.rs"
test = false
doc = false

[[bin]]
name = "to_cesu8"
path = "fuzz_targets/to_cesu8.rs"
test = false
doc = false

[[bin]]
name = "from_java_cesu8"
path = "fuzz_targets/from_java_cesu8.rs"
test = false
doc = false

[[bin]]
name = "to_java_cesu8"
path = "fuzz_targets/to_java_cesu8.rs"
test = false
doc = false
